--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
 	"type": "module",
 	"scripts": {
 		"build": "tsc",
+		"watch": "tsc -w",
+		"dev": "nodemon -w *.ts -e ts -x ts-node --esm --files -H -T ./src/index.ts",
+		"prod": "node dist/index.js",
 		"format": "eslint . --ext .ts",
 		"format-and-fix": "eslint . --ext .ts --fix"
 	},
@@ -18,6 +21,8 @@
 		"@typescript-eslint/eslint-plugin": "^5.47.1",
 		"@typescript-eslint/parser": "^5.47.1",
 		"eslint-config-google": "^0.14.0",
+		"nodemon": "^2.0.20",
+		"ts-node": "^10.9.1",
 		"typescript": "^4.9.4"
 	}
 }
