--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
 		"no-unused-vars": "off",
 		"no-tabs": ["error", { "allowIndentationTabs": true }],
 		"require-jsdoc": "off",
+		"object-curly-spacing": ["error", "always"],
 		"@typescript-eslint/no-unused-vars": "error",
 		"camelcase": "off",
 		"@typescript-eslint/naming-convention": [
