--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"license": "ISC",
 	"devDependencies": {
 		"@tsconfig/node18-strictest": "^1.0.0",
+		"@types/glob": "^8.0.0",
 		"@types/node": "^18.11.18",
 		"@typescript-eslint/eslint-plugin": "^5.47.1",
 		"@typescript-eslint/parser": "^5.47.1",
@@ -24,5 +25,10 @@
 		"nodemon": "^2.0.20",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.9.4"
+	},
+	"dependencies": {
+		"discord.js": "^14.7.1",
+		"dotenv": "^16.0.3",
+		"glob": "^8.0.3"
 	}
 }
