--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
 		"@typescript-eslint/eslint-plugin": "^5.47.1",
 		"@typescript-eslint/parser": "^5.47.1",
 		"eslint-config-google": "^0.14.0",
+		"eslint-config-prettier": "^8.6.0",
+		"eslint-plugin-prettier": "^4.2.1",
 		"nodemon": "^2.0.20",
+		"prettier": "^2.8.3",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.9.4"
 	},
