--- a/package.json
+++ b/package.json
@@ -1,38 +1,39 @@
 {
-	"name": "nodejs-typescript-template",
-	"version": "1.0.0",
-	"description": "Template project for typescript and nodejs.",
-	"main": "index.js",
-	"type": "module",
-	"scripts": {
-		"build": "tsc",
-		"watch": "tsc -w",
-		"dev": "nodemon -w *.ts -e ts -x ts-node --esm --files -H -T ./src/index.ts",
-		"prod": "node dist/index.js",
-		"format": "eslint . --ext .ts",
-		"format-and-fix": "eslint . --ext .ts --fix",
-		"register-commands": "tsc && node ./dist/scripts/registerSlashCommands.js"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"devDependencies": {
-		"@tsconfig/node18-strictest": "^1.0.0",
-		"@types/glob": "^8.0.0",
-		"@types/node": "^18.11.18",
-		"@typescript-eslint/eslint-plugin": "^5.47.1",
-		"@typescript-eslint/parser": "^5.47.1",
-		"eslint-config-google": "^0.14.0",
-		"eslint-config-prettier": "^8.6.0",
-		"eslint-plugin-prettier": "^4.2.1",
-		"nodemon": "^2.0.20",
-		"prettier": "^2.8.3",
-		"ts-node": "^10.9.1",
-		"typescript": "^4.9.4"
-	},
-	"dependencies": {
-		"discord.js": "^14.7.1",
-		"dotenv": "^16.0.3",
-		"glob": "^8.0.3"
-	}
+    "name": "nodejs-typescript-template",
+    "version": "1.0.0",
+    "description": "Template project for typescript and nodejs.",
+    "main": "index.js",
+    "type": "module",
+    "scripts": {
+        "build": "tsc",
+        "watch": "tsc -w",
+        "dev": "nodemon -w *.ts -e ts -x ts-node --esm --files -H -T ./src/index.ts",
+        "prod": "node dist/index.js",
+        "lint": "eslint . --ext .ts",
+        "lint-and-fix": "eslint . --ext .ts --fix",
+        "format": "prettier --config .prettierrc --write \"**/*.+(js|ts|json)\"",
+        "register-commands": "tsc && node ./dist/scripts/registerSlashCommands.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@tsconfig/node18-strictest": "^1.0.0",
+        "@types/glob": "^8.0.0",
+        "@types/node": "^18.11.18",
+        "@typescript-eslint/eslint-plugin": "^5.47.1",
+        "@typescript-eslint/parser": "^5.47.1",
+        "eslint-config-google": "^0.14.0",
+        "eslint-config-prettier": "^8.6.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "nodemon": "^2.0.20",
+        "prettier": "^2.8.3",
+        "ts-node": "^10.9.1",
+        "typescript": "^4.9.4"
+    },
+    "dependencies": {
+        "discord.js": "^14.7.1",
+        "dotenv": "^16.0.3",
+        "glob": "^8.0.3"
+    }
 }
