feat: Add command aliases

--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
         "lint": "eslint . --ext .ts",
         "lint-and-fix": "eslint . --ext .ts --fix",
         "format": "prettier --config .prettierrc --write \"**/*.+(js|ts|json)\"",
-        "register-global-commands": "tsc && node ./dist/scripts/registerGlobalSlashCommands.js",
-        "register-guild-commands": "tsc && node ./dist/scripts/registerGuildSlashCommands.js",
-        "clear-guild-commands": "tsc && node ./dist/scripts/clearGuildSlashCommands.js"
+        "register-global-commands": "tsc && node ./dist/scripts/commands/registerGlobalSlashCommands.js",
+        "register-guild-commands": "tsc && node ./dist/scripts/commands/registerGuildSlashCommands.js",
+        "clear-global-commands": "tsc && node ./dist/scripts/commands/clearGlobalSlashCommands.js",
+        "clear-guild-commands": "tsc && node ./dist/scripts/commands/clearGuildSlashCommands.js"
     },
     "keywords": [],
     "author": "",
