--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "typescript": "^4.9.4"
     },
     "dependencies": {
+        "chalk": "^5.2.0",
         "discord.js": "^14.7.1",
         "dotenv": "^16.0.3",
         "glob": "^8.0.3"
