--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "chalk": "^5.2.0",
         "discord.js": "^14.7.1",
         "dotenv": "^16.0.3",
-        "glob": "^8.0.3"
+        "glob": "^8.0.3",
+        "mongoose": "^6.9.0"
     }
 }
