--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "build": "tsc",
         "watch": "tsc -w",
-        "dev": "nodemon -w *.ts -e ts -x ts-node --esm --files -H -T ./src/index.ts",
+        "dev": "nodemon -w *.ts -e ts -x ts-node --esm --files -H ./src/index.ts",
         "prod": "node dist/index.js",
         "lint": "eslint . --ext .ts",
         "lint-and-fix": "eslint . --ext .ts --fix",
@@ -22,25 +22,26 @@
     "license": "ISC",
     "devDependencies": {
         "@tsconfig/node18-strictest": "^1.0.0",
-        "@types/glob": "^8.0.0",
-        "@types/node": "^18.11.18",
-        "@typescript-eslint/eslint-plugin": "^5.47.1",
-        "@typescript-eslint/parser": "^5.47.1",
+        "@types/glob": "^8.1.0",
+        "@types/node": "^20.2.5",
+        "@typescript-eslint/eslint-plugin": "^5.59.8",
+        "@typescript-eslint/parser": "^5.59.8",
         "eslint-config-google": "^0.14.0",
-        "eslint-config-prettier": "^8.6.0",
+        "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-prettier": "^4.2.1",
-        "nodemon": "^2.0.20",
-        "prettier": "^2.8.3",
+        "nodemon": "^2.0.22",
+        "prettier": "^2.8.8",
         "ts-node": "^10.9.1",
-        "typescript": "^4.9.4"
+        "typescript": "^5.0.4"
     },
     "dependencies": {
-        "@discordjs/voice": "^0.14.0",
+        "@discordjs/voice": "^0.16.0",
+        "@typegoose/typegoose": "^11.2.0",
         "chalk": "^5.2.0",
-        "discord.js": "^14.7.1",
-        "dotenv": "^16.0.3",
-        "glob": "^8.0.3",
+        "discord.js": "^14.11.0",
+        "dotenv": "^16.1.2",
+        "glob": "^10.2.6",
         "json-colorizer": "^2.2.2",
-        "mongoose": "^6.9.0"
+        "mongoose": "^7.2.2"
     }
 }
