--- a/package.json
+++ b/package.json
@@ -35,17 +35,20 @@
         "typescript": "^5.0.4"
     },
     "dependencies": {
+        "@discordjs/opus": "^0.9.0",
         "@discordjs/voice": "^0.16.0",
         "@typegoose/typegoose": "^11.2.0",
         "async-mutex": "^0.4.0",
         "chalk": "^5.2.0",
         "discord.js": "^14.11.0",
         "dotenv": "^16.1.2",
+        "ffmpeg-static": "^5.1.0",
         "glob": "^10.2.6",
         "json-colorizer": "^2.2.2",
         "mongoose": "^7.2.2",
         "parse-url": "^8.1.0",
         "play-dl": "^1.9.6",
+        "tweetnacl": "^1.0.3",
         "youtube-dl-exec": "^2.4.4",
         "ytdl-core": "^4.11.4"
     }
