--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@tsconfig/node18-strictest": "^1.0.0",
         "@types/glob": "^8.1.0",
         "@types/node": "^20.2.5",
+        "@types/string-similarity": "^4.0.0",
         "@typescript-eslint/eslint-plugin": "^5.59.8",
         "@typescript-eslint/parser": "^5.59.8",
         "eslint-config-google": "^0.14.0",
@@ -49,6 +50,7 @@
         "mongoose": "^7.2.2",
         "parse-url": "^8.1.0",
         "play-dl": "^1.9.6",
+        "string-similarity": "^4.0.4",
         "tweetnacl": "^1.0.3",
         "youtube-dl-exec": "^2.4.4",
         "ytdl-core": "^4.11.4"
