--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "dependencies": {
         "@discordjs/opus": "^0.9.0",
         "@discordjs/voice": "^0.16.0",
+        "@distube/ytdl-core": "^4.13.5",
         "@typegoose/typegoose": "^11.7.1",
         "array-shuffle": "^3.0.0",
         "async-mutex": "^0.4.0",
