--- a/package.json
+++ b/package.json
@@ -47,14 +47,18 @@
         "@discordjs/opus": "^0.9.0",
         "@discordjs/voice": "^0.16.0",
         "@distube/ytdl-core": "^4.13.5",
+        "@ffmpeg-installer/ffmpeg": "^1.1.0",
         "@typegoose/typegoose": "^11.7.1",
+        "@types/fluent-ffmpeg": "^2.1.24",
         "array-shuffle": "^3.0.0",
         "async-mutex": "^0.4.0",
         "chalk": "^5.3.0",
         "didyoumean": "^1.2.2",
         "discord.js": "^14.11.0",
         "dotenv": "^16.3.1",
+        "ffmpeg": "^0.0.4",
         "ffmpeg-static": "^5.1.0",
+        "fluent-ffmpeg": "^2.1.3",
         "glob": "^10.3.1",
         "json-colorizer": "^2.2.2",
         "mongoose": "^7.6.13",
