--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
         "mongoose": "^7.6.13",
         "parse-url": "^8.1.0",
         "play-dl": "^1.9.6",
+        "set-interval-async": "^3.0.3",
         "string-similarity": "^4.0.4",
         "tweetnacl": "^1.0.3",
         "youtube-dl-exec": "^2.4.6",
